examples/test/testpolicy9698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9698
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key14: value47
      key32: value27
      key22: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value40
          key0: value34
      podSelector:
        matchLabels:
          key15: value28
          key29: value33
